--- a/src/main.css
+++ b/src/main.css
@@ -527,21 +527,12 @@ video {
   margin-right: 15%;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
 .mt-\[3rem\] {
   margin-top: 3rem;
-}
-
-.mt-\[5rem\] {
-  margin-top: 5rem;
 }
 
 .block {
@@ -552,40 +543,18 @@ video {
   display: flex;
 }
 
-.h-\[3\.2rem\] {
-  height: 3.2rem;
-}
-
-.w-\[94\%\] {
-  width: 94%;
-}
-
 .w-full {
   width: 100%;
 }
 
-.items-center {
-  align-items: center;
-}
-
-.justify-between {
-  justify-content: space-between;
+.justify-center {
+  justify-content: center;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-\[2rem\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 
 .rounded-lg {
@@ -604,21 +573,6 @@ video {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.bg-mainblue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(91 209 215 / var(--tw-bg-opacity));
-}
-
-.bg-mainbluee {
-  --tw-bg-opacity: 1;
-  background-color: rgb(188 206 251 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -644,7 +598,7 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.py-4 {
+.py-\[1rem\] {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -653,35 +607,14 @@ video {
   text-align: center;
 }
 
-.text-start {
-  text-align: start;
-}
-
-.text-\[1\.2rem\] {
-  font-size: 1.2rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-medium {
@@ -702,13 +635,56 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+.img img{
+  height: 2.3rem;
 }
 
-.underline {
-  text-decoration-line: underline;
+.blue{
+  color: #fff;
+  background-color:  #10b0ed;
+}
+
+.button {
+  position: relative;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.button:active {
+  background: #007a63;
+}
+
+.button__text {
+  color: #ffffff;
+  transition: all 0.2s;
+}
+
+.button--loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  color: #10b0ed;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 @media (min-width: 640px) {
